# llama.cpp-validation

./: .gitignore  CMakeLists.txt  CMakePresets.json  README.md
.github/workflows/: ci.yml
build-riscv-cross/: .ninja_deps  .ninja_log  CMakeCache.txt  CTestTestfile.cmake  build.ninja  cmake_install.cmake  compile_commands.json
build-riscv-cross/llama.cpp/: CTestTestfile.cmake  DartConfiguration.tcl  cmake_install.cmake  llama-config.cmake  llama-version.cmake  llama.pc
build-riscv-cross/llama.cpp/common/: build-info.cpp  cmake_install.cmake
build-riscv-cross/llama.cpp/ggml/: cmake_install.cmake  ggml-config.cmake  ggml-version.cmake
build-riscv-cross/llama.cpp/ggml/src/: cmake_install.cmake
build-riscv-cross/llama.cpp/ggml/src/ggml-cpu/: cmake_install.cmake
build-riscv-cross/llama.cpp/src/: cmake_install.cmake
build-riscv-cross/llama.cpp/tests/: CTestTestfile.cmake  cmake_install.cmake
build-riscv-cross/llama.cpp/tools/: CTestTestfile.cmake  cmake_install.cmake
build-riscv-cross/llama.cpp/tools/batched-bench/: CTestTestfile.cmake  cmake_install.cmake
build-riscv-cross/llama.cpp/tools/completion/: CTestTestfile.cmake  cmake_install.cmake
build-riscv-cross/llama.cpp/tools/cvector-generator/: CTestTestfile.cmake  cmake_install.cmake
build-riscv-cross/llama.cpp/tools/export-lora/: CTestTestfile.cmake  cmake_install.cmake
build-riscv-cross/llama.cpp/tools/fit-params/: CTestTestfile.cmake  cmake_install.cmake
build-riscv-cross/llama.cpp/tools/gguf-split/: CTestTestfile.cmake  cmake_install.cmake
build-riscv-cross/llama.cpp/tools/imatrix/: CTestTestfile.cmake  cmake_install.cmake
build-riscv-cross/llama.cpp/tools/llama-bench/: CTestTestfile.cmake  cmake_install.cmake
build-riscv-cross/llama.cpp/tools/mtmd/: CTestTestfile.cmake  cmake_install.cmake
build-riscv-cross/llama.cpp/tools/parser/: CTestTestfile.cmake  cmake_install.cmake
build-riscv-cross/llama.cpp/tools/perplexity/: CTestTestfile.cmake  cmake_install.cmake
build-riscv-cross/llama.cpp/tools/quantize/: CTestTestfile.cmake  cmake_install.cmake
build-riscv-cross/llama.cpp/tools/results/: CTestTestfile.cmake  cmake_install.cmake
build-riscv-cross/llama.cpp/tools/tokenize/: CTestTestfile.cmake  cmake_install.cmake
build-riscv-cross/llama.cpp/tools/tts/: CTestTestfile.cmake  cmake_install.cmake
cmake/: riscv64-linux-gcc.cmake  run-model-bench-all.cmake
tests/: perf-float.cpp  perf-repack.cpp  test-float.cpp  test-quantize.cpp  test-repack.cpp
